--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Thought Repository
-email: tord[at]natlandsmyr.com
+email: contact@natlandsmyr.com
 description: >- # this means to ignore newlines until "baseurl:" 
   I post here, barely.
 baseurl: "" # the subpath of your site, e.g. /blog
@@ -32,7 +32,7 @@ github_username:  tordnat
 # Build settings
 
 
-theme: minima
+theme: no-style-please
 plugins:
   - jekyll-feed
 
