--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ github_username:  tordnat
 # Build settings
 
 
-theme: no-style-please
+remote_theme: no-style-please
 plugins:
   - jekyll-feed
 
