Modify main menu

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -3,6 +3,9 @@ entries:
     entries:
       - title: Pursuing a MSc in Cybernetics and Robotics at NTNU
       - title: Working part-time building drones at the Autonomous Robots Lab NTNU and teaching modelling and simulation in Python
+  - title: Reach out
+    entries:
+      - title: contact@natlandsmyr.com
       - title: Github profile
         url: https://github.com/tordnat
       - title: LinkedIn
