--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,9 +1,9 @@
 entries:
-  - title: About me
+  - title: about me
     entries:
       - title: Pursuing a MSc in Cybernetics and Robotics at NTNU
       - title: Working part-time building drones at the Autonomous Robots Lab NTNU and teaching modelling and simulation in Python
-  - title: Reach out
+  - title: reach out
     entries:
       - title: contact@natlandsmyr.com
       - title: Github profile
