--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -5,7 +5,7 @@ entries:
       - title: Working part-time building drones at the Autonomous Robots Lab NTNU and teaching modelling and simulation in Python
   - title: reach out
     entries:
-      - title: contact@natlandsmyr.com
+      - title: contact[at]natlandsmyr.com
       - title: Github profile
         url: https://github.com/tordnat
       - title: LinkedIn
