--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -10,8 +10,7 @@ entries:
         url: https://github.com/tordnat
       - title: LinkedIn
         url: https://www.linkedin.com/in/tord-natlandsmyr/
-      - title: CV
-        url: https://folk.ntnu.no/tordna/Tords_CV.pdf
+      - title: CV (on request only)
 
   - title: all posts
     post_list:
