--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Tord Natlandsmyr
 email: contact@natlandsmyr.com
 description: >- # this means to ignore newlines until "baseurl:" 
-  I post here, barely.
+  Ed è subito sera.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://natlandsmyr.com" # the base hostname & protocol for your site, e.g. http://example.com
 
