Projective geometry post

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -2,7 +2,7 @@ entries:
   - title: about me
     entries:
       - title: Pursuing a MSc in Cybernetics and Robotics at NTNU
-      - title: Currenctly doing a research internship at the Smart Robotics Lab at TUM
+      - title: Currenctly doing a research internship at the Smart Robotics Lab TUM / Mobiler Robotics Lab ETH
   - title: reach out
     entries:
       - title: contact[at]natlandsmyr.com
