--- a/_config.yml
+++ b/_config.yml
@@ -36,6 +36,12 @@ remote_theme: riggraz/no-style-please
 plugins:
   - jekyll-feed
 
+theme_config:
+  appearance: "auto" # can be "light", "dark" or "auto"
+  back_home_text: ".." # customize text for homepage link in post layout
+  date_format: "%Y-%m-%d" # customize how date is formatted
+  show_description: true # show blog description in home page
+  lowercase_titles: true # show titles in lowercase in lists
 
 # Exclude from processing.
 # The following items will not be processed, by default.
