--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,7 +1,7 @@
 entries:
   - title: about me
     entries:
-      - title: Pursuing a MSc in Cybernetics and Robotics at NTNU
+      - title: Pursuing a MSc at NTNU in Cybernetics and Robotics majoring in Autonomous Systems
       - title: Currenctly doing a research internship at the Smart Robotics Lab TUM / Mobile Robotics Lab ETH
   - title: reach out
     entries:
