--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -2,7 +2,7 @@ entries:
   - title: about me
     entries:
       - title: Pursuing a MSc at NTNU in Cybernetics and Robotics specializing in Autonomous Systems
-      - title: Currenctly doing a research internship at the Smart Robotics Lab TUM / Mobile Robotics Lab ETH
+      - title: Investigating the effects of AI in higher education & teaching modelling and simulation
   - title: reach out
     entries:
       - title: contact[at]natlandsmyr.com
